Agregar estilos mobile first

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./css/style.css">
   <title>Four card feature section</title>
 
@@ -25,7 +28,7 @@
         <h3 class="article__title">Supervisor</h3>
         <p class="article__paragraph">Monitors activity to identify project roadblocks</p>
         <span class="article__icon">
-          <img src="./images/icon-supervisor.svg" alt="Icon">
+          <img class="icon" src="./images/icon-supervisor.svg" alt="Icon">
         </span>
       </article>
 
@@ -33,7 +36,7 @@
         <h3 class="article__title">Team Builder</h3>
         <p class="article__paragraph">Scans our network to create the optimal team for project</p>
         <span class="article__icon">
-          <img src="./images/icon-team-builder.svg" alt="Icon">
+          <img class="icon" src="./images/icon-team-builder.svg" alt="Icon">
         </span>
       </article>
 
@@ -41,7 +44,7 @@
         <h3 class="article__title">Karma</h3>
         <p class="article__paragraph">Regularly our talent to ensure quality</p>
         <span class="article__icon">
-          <img src="./images/icon-karma.svg" alt="Icon">
+          <img class="icon" src="./images/icon-karma.svg" alt="Icon">
         </span>
       </article>
 
@@ -49,7 +52,7 @@
         <h3 class="article__title">Calculator</h3>
         <p class="article__paragraph">Uses data from past projects to provide better delivery estimates</p>
         <span class="article__icon">
-          <img src="./images/icon-calculator.svg" alt="Icon">
+          <img class="icon" src="./images/icon-calculator.svg" alt="Icon">
         </span>
       </article>
 
